OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Accessory_Division__c.field-meta.xml
<CustomField>
    <fullName>Accessory_Division__c</fullName>
    <formula>text ( Account.Accessory_Division__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accessory Division</label>
    <type>Text</type>
</CustomField>