OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Accessory_Region__c.field-meta.xml
<CustomField>
    <fullName>Accessory_Region__c</fullName>
    <formula>text( Account.Accessory_Region__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accessory Region</label>
    <type>Text</type>
</CustomField>