OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Accessory_Territory__c.field-meta.xml
<CustomField>
    <fullName>Accessory_Territory__c</fullName>
    <formula>text( Account.Accessory_Territory__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accessory Territory</label>
    <type>Text</type>
</CustomField>