OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Account_Phone__c.field-meta.xml
<CustomField>
    <fullName>Account_Phone__c</fullName>
    <description>Account.Phone</description>
    <formula>Account.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Account Phone Number</inlineHelpText>
    <label>Account Phone #</label>
    <type>Text</type>
</CustomField>