OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Account_Territory__c.field-meta.xml
<CustomField>
    <fullName>Account_Territory__c</fullName>
    <formula>TEXT(Account.Territory__c)</formula>
    <label>Program Territory</label>
    <type>Text</type>
</CustomField>