OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Agreement_Template__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agreement Template</label>
    <referenceTo>echosign_dev1__Agreement_Template__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>