OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Alert_Message__c.field-meta.xml
<CustomField>
    <fullName>Alert_Message__c</fullName>
    <label>Alert Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>