OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Application_ID__c.field-meta.xml
<CustomField>
    <fullName>Application_ID__c</fullName>
    <description>DIRECTV Application ID</description>
    <externalId>true</externalId>
    <inlineHelpText>DIRECTV Application ID</inlineHelpText>
    <label>DTV Application ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>