OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <label>Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Paperwork Sent</fullName>
            </value>
            <value>
                <fullName>Pending Initial Review</fullName>
            </value>
            <value>
                <fullName>Awaiting Training</fullName>
                <label>Pending Training</label>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Setup Complete</fullName>
            </value>
            <value>
                <fullName>Pending Compliance</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Pending Partner</fullName>
            </value>
            <value>
                <fullName>Pending Sales</fullName>
            </value>
            <value>
                <fullName>Pending Onboarding</fullName>
            </value>
            <value>
                <fullName>Pending Setup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>