OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Attempts_Made__c.field-meta.xml
<CustomField>
    <fullName>Attempts_Made__c</fullName>
    <description>Number of attempts to contact dealer without getting any kind of response from dealer.</description>
    <label>Attempts Made</label>
    <length>3</length>
    <type>Text</type>
</CustomField>