OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/AutoPay__c.field-meta.xml
<CustomField>
    <fullName>AutoPay__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Registers AutoPay selection of the user [PER-1203]</description>
    <label>AutoPay</label>
    <type>Checkbox</type>
</CustomField>