OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Available_Programs__c.field-meta.xml
<CustomField>
    <fullName>Available_Programs__c</fullName>
    <label>Available Programs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>