OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Cable_Accessories__c.field-meta.xml
<CustomField>
    <fullName>Cable_Accessories__c</fullName>
    <label>Cable Accessories</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Won</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>