OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/CATV_Opportunity_Source__c.field-meta.xml
<CustomField>
    <fullName>CATV_Opportunity_Source__c</fullName>
    <description>CATVMSO Field</description>
    <inlineHelpText>CATVMSO Field</inlineHelpText>
    <label>Opp Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Trade Show</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Rep Generated</fullName>
            </value>
            <value>
                <fullName>Project Based</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Web Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>