OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Chemicals_Paint__c.field-meta.xml
<CustomField>
    <fullName>Chemicals_Paint__c</fullName>
    <label>Chemicals &amp; Paint</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Won</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>