OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Chuzo_CSA_Form_Data__c.field-meta.xml
<CustomField>
    <fullName>Chuzo_CSA_Form_Data__c</fullName>
    <description>Stores data used to prefill the CSA Form [PER-4202]</description>
    <label>Chuzo CSA Form Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>