OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Click2Create_Flag__c.field-meta.xml
<CustomField>
    <fullName>Click2Create_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the Opportunity was created through Click2Create on Maps.</description>
    <label>Click2Create Flag</label>
    <type>Checkbox</type>
</CustomField>