OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Connectors__c.field-meta.xml
<CustomField>
    <fullName>Connectors__c</fullName>
    <label>Connectors</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Won</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>