OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Created_by_VPN_User__c.field-meta.xml
<CustomField>
    <fullName>Created_by_VPN_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the opportunity was created by a user with an active VPN during login. (PER-5307)</description>
    <inlineHelpText>Indicates that the opportunity was created by a user with an active VPN during login.</inlineHelpText>
    <label>Created by VPN User</label>
    <type>Checkbox</type>
</CustomField>