OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Current_Queue__c.field-meta.xml
<CustomField>
    <fullName>Current_Queue__c</fullName>
    <label>Current Queue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>APPROVED</fullName>
            </value>
            <value>
                <fullName>ASM</fullName>
            </value>
            <value>
                <fullName>BB CHAIN NUMBER</fullName>
            </value>
            <value>
                <fullName>CONTRACT</fullName>
            </value>
            <value>
                <fullName>CORPORATE MANAGEMENT</fullName>
            </value>
            <value>
                <fullName>DENIED</fullName>
            </value>
            <value>
                <fullName>INCOMPLETE</fullName>
            </value>
            <value>
                <fullName>LEGAL REVIEW</fullName>
            </value>
            <value>
                <fullName>NEW APPLICATION</fullName>
            </value>
            <value>
                <fullName>QUEUE PENDING INCOMPLETE</fullName>
            </value>
            <value>
                <fullName>REGION HEAD</fullName>
            </value>
            <value>
                <fullName>RISK MANAGEMENT</fullName>
            </value>
            <value>
                <fullName>THE BUCKET</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>