OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Current_Year_Projections__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Projections__c</fullName>
    <label>Current Year Projections</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>