OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Date_Sent_to_TM__c.field-meta.xml
<CustomField>
    <fullName>Date_Sent_to_TM__c</fullName>
    <description>This is the date the lead said yes to talking more about the opportunity</description>
    <inlineHelpText>This is the date the lead said yes to talking more about the opportunity</inlineHelpText>
    <label>Date Lead was Qualified</label>
    <type>Date</type>
</CustomField>