OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Date_TM_Accepted_Lead__c.field-meta.xml
<CustomField>
    <fullName>Date_TM_Accepted_Lead__c</fullName>
    <description>This is the date the TM accepted the lead that was sent to them from the inside</description>
    <label>Date TM Accepted Lead</label>
    <type>Date</type>
</CustomField>