OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Dealer_Service_Region_s__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Service_Region_s__c</fullName>
    <description>All of the service region(s) the dealer will be responsible for covering.</description>
    <inlineHelpText>FFL - All of the service region(s) the dealer will be responsible for covering.</inlineHelpText>
    <label>Dealer Service Region(s)</label>
    <type>TextArea</type>
</CustomField>