OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/DMA__c.field-meta.xml
<CustomField>
    <fullName>DMA__c</fullName>
    <formula>Text(Account.DMA__c)</formula>
    <label>DMA</label>
    <type>Text</type>
</CustomField>