OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Documents_Ready__c.field-meta.xml
<CustomField>
    <fullName>Documents_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field stores if the opportunity is ready to have documents sent</description>
    <label>Documents Ready</label>
    <type>Checkbox</type>
</CustomField>