OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/DTV_App_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>DTV_App_Created_Date__c</fullName>
    <description>Date the App was created in the DTV system. All applications received prior to the 07/2014 conversion date will have 07/30/2014.</description>
    <label>DTV Application Created Date</label>
    <type>Date</type>
</CustomField>