OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/DTV_App_Notes_1__c.field-meta.xml
<CustomField>
    <fullName>DTV_App_Notes_1__c</fullName>
    <label>DTV App Notes 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>