OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/DTV_LAST_STATUS_DATE__c.field-meta.xml
<CustomField>
    <fullName>DTV_LAST_STATUS_DATE__c</fullName>
    <description>DIRECTV last status date</description>
    <inlineHelpText>DIRECTV last status date</inlineHelpText>
    <label>DTV Last Status Date</label>
    <type>Date</type>
</CustomField>