OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Earthlink_Sale_Type__c.field-meta.xml
<CustomField>
    <fullName>Earthlink_Sale_Type__c</fullName>
    <description>Sales selection stored for Finance payments. [PER-3208]</description>
    <label>Earthlink Sale Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>