OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Ebill_Registration__c.field-meta.xml
<CustomField>
    <fullName>Ebill_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Registers Ebill selection of the user [PER-1203]</description>
    <label>Ebill Registration</label>
    <type>Checkbox</type>
</CustomField>