OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Email_for_Paperwork__c.field-meta.xml
<CustomField>
    <fullName>Email_for_Paperwork__c</fullName>
    <label>Email for Paperwork</label>
    <type>Email</type>
</CustomField>