OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/External_Agent_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Agent_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Agent Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>