OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/External_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Opportunity_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External Opportunity ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>