OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/External_Session_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Session_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Session Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>