OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/FFL_All_Phases__c.field-meta.xml
<CustomField>
    <fullName>FFL_All_Phases__c</fullName>
    <description>All available Exede phases for FFL</description>
    <label>FFL All Phase(s)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>