OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/FFL_Current_Year_Projections__c.field-meta.xml
<CustomField>
    <fullName>FFL_Current_Year_Projections__c</fullName>
    <label>FFL Current Year Projections</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>