OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/FFL_Prior_Year_Gross_Activations__c.field-meta.xml
<CustomField>
    <fullName>FFL_Prior_Year_Gross_Activations__c</fullName>
    <label>FFL Prior Year Gross Activations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>