OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/First_Attempted_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Attempted_Date__c</fullName>
    <label>First Attempted Date</label>
    <type>Date</type>
</CustomField>