OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Frontier_911_Terms_Sent__c.field-meta.xml
<CustomField>
    <fullName>Frontier_911_Terms_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag that indicates the e-911 term was sent in a Frontier&apos;s portability order [PER-5800]</description>
    <label>Frontier 911 Terms Sent</label>
    <type>Checkbox</type>
</CustomField>