OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Frontier_BTN__c.field-meta.xml
<CustomField>
    <fullName>Frontier_BTN__c</fullName>
    <description>Frontier BTN for Quote Resume purposes [PER-4546]</description>
    <label>Frontier BTN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>