OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Frontier_Quote_ID__c.field-meta.xml
<CustomField>
    <fullName>Frontier_Quote_ID__c</fullName>
    <description>Quote ID provided by Frontier&apos;s systems, used for Quote Resume functionality [PER-1203]</description>
    <label>Quote ID / Transaction</label>
    <length>80</length>
    <type>Text</type>
</CustomField>