OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Frontier_Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Frontier_Quote_Number__c</fullName>
    <description>Quote Number provided by Frontier&apos;s systems, used for Quote Resume functionality [PER-1203]</description>
    <label>Frontier Quote Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>