OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Full_Credit_Check__c.field-meta.xml
<CustomField>
    <fullName>Full_Credit_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if a Full Credit Check was performed [PER-5715]</description>
    <label>Full Credit Check</label>
    <type>Checkbox</type>
</CustomField>