OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/General_Email__c.field-meta.xml
<CustomField>
    <fullName>General_Email__c</fullName>
    <label>General Email</label>
    <type>Email</type>
</CustomField>