OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Hardware__c.field-meta.xml
<CustomField>
    <fullName>Hardware__c</fullName>
    <label>Hardware</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Won</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>