OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/If_closed_lost_why__c.field-meta.xml
<CustomField>
    <fullName>If_closed_lost_why__c</fullName>
    <description>If this opportunity is closed/lost, what is the reason?</description>
    <inlineHelpText>If this opportunity is closed/lost, what is the reason?</inlineHelpText>
    <label>If closed/lost, why?</label>
    <type>TextArea</type>
</CustomField>