OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/If_Other_What_Source__c.field-meta.xml
<CustomField>
    <fullName>If_Other_What_Source__c</fullName>
    <label>Opp Source Details</label>
    <length>155</length>
    <type>Text</type>
</CustomField>