OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Incomplete_Type__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Type__c</fullName>
    <description>Status type for incomplete application. Used when the Opportunity Paperwork Status equals any of the Incomplete options.</description>
    <inlineHelpText>Status type for incomplete application. Used when the Opportunity Paperwork Status equals any of the Incomplete options.</inlineHelpText>
    <label>Incomplete Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Resale</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Buydown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>