OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Inside_Recruiter__c.field-meta.xml
<CustomField>
    <fullName>Inside_Recruiter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inside Recruiter</label>
    <type>Checkbox</type>
</CustomField>