OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/IP_Address__c.field-meta.xml
<CustomField>
    <fullName>IP_Address__c</fullName>
    <label>IP Address</label>
    <length>15</length>
    <type>Text</type>
</CustomField>