OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Maps_Appartment__c.field-meta.xml
<CustomField>
    <fullName>Maps_Appartment__c</fullName>
    <label>Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>