OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Maps_AptNumber__c.field-meta.xml
<CustomField>
    <fullName>Maps_AptNumber__c</fullName>
    <label>Apt Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>