OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Maps_Building__c.field-meta.xml
<CustomField>
    <fullName>Maps_Building__c</fullName>
    <label>Building</label>
    <length>25</length>
    <type>Text</type>
</CustomField>