OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Maps_City__c.field-meta.xml
<CustomField>
    <fullName>Maps_City__c</fullName>
    <label>City</label>
    <length>25</length>
    <type>Text</type>
</CustomField>