OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Maps_Country__c.field-meta.xml
<CustomField>
    <fullName>Maps_Country__c</fullName>
    <label>Country</label>
    <length>25</length>
    <type>Text</type>
</CustomField>