OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Maps_Floor__c.field-meta.xml
<CustomField>
    <fullName>Maps_Floor__c</fullName>
    <label>Floor</label>
    <length>5</length>
    <type>Text</type>
</CustomField>