OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Maps_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Maps_Latitude__c</fullName>
    <label>Maps Latitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>