OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Maps_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Maps_Longitude__c</fullName>
    <label>Maps Longitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>