OnboardingV2Minimal/force-app/main/default/objects/Opportunity/fields/Maps_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Maps_PostalCode__c</fullName>
    <label>Postal Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>